<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C)  2024 The RisingOS Project
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_title"
            android:text="@string/apply_to"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_semilarge"
            android:id="@+id/text_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_lock"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            app:cardCornerRadius="40dp"
            android:layout_marginEnd="@dimen/margin_secondary"
            android:background="@drawable/card_outline_apply_dialog"
            app:cardBackgroundColor="@android:color/transparent">

                <ImageView
                    android:id="@+id/card_lock_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card_outline_apply_dialog"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                        <ImageView
                            android:id="@+id/card_lock_icon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_lock"
                            android:layout_gravity="center_horizontal"
                            android:tint="@color/accent_neutral" />

                        <TextView
                            android:id="@+id/text_lock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_primary"
                            android:textColor="@color/accent_neutral"
                            android:text="@string/lock_screen"
                            android:layout_gravity="center_horizontal"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_home"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            app:cardCornerRadius="40dp"
            android:layout_marginStart="@dimen/margin_secondary"
            android:background="@drawable/card_outline_apply_dialog"
            app:cardBackgroundColor="@android:color/transparent">

                <ImageView
                    android:id="@+id/card_home_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card_outline_apply_dialog"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                        <ImageView
                            android:id="@+id/card_home_icon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_home"
                            android:layout_gravity="center_horizontal"
                            android:tint="@color/accent_neutral" />

                        <TextView
                            android:id="@+id/text_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_primary"
                            android:textColor="@color/accent_neutral"
                            android:text="@string/home_screen"
                            android:layout_gravity="center_horizontal"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

        <org.risingos.wallpaperpicker.views.TextButtonView
            android:id="@+id/button_apply_diag"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/apply_to"
            android:layout_marginTop="@dimen/margin_semilarge"
            android:layout_marginHorizontal="@dimen/margin_large"
            app:background_color="@color/accent_foreground"
            app:foreground_color="@color/button_view_apply_foreground"
            app:text="@string/apply"/>

        <org.risingos.wallpaperpicker.views.TextButtonView
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/apply_to"
            android:layout_marginTop="@dimen/margin_primary"
            android:layout_marginHorizontal="@dimen/margin_large"
            app:background_color="@color/accent_neutral"
            app:foreground_color="@color/button_view_apply_foreground"
            app:text="@string/cancel"/>
</LinearLayout>
