<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C)  2024 The RisingOS Project
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="@dimen/text_size_title"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:text="@string/about_risingwalls"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_secondary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginVertical="@dimen/margin_secondary"
            android:layout_marginLeft="@dimen/margin_secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                app:cardCornerRadius="@dimen/corner_radius_secondary"
                app:cardBackgroundColor="@color/accent_neutral"
                android:layout_margin="@dimen/margin_secondary">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/rising_banner"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="@dimen/margin_secondary"
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/accent_neutral"
                app:cardCornerRadius="@dimen/corner_radius_secondary" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_secondary">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textSize="17sp"
                        android:text="@string/risingwalls_version" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/config_version" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/margin_secondary"
            android:layout_marginRight="@dimen/margin_secondary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/accent_neutral"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_secondary"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/corner_radius_secondary">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/opensourcefreak"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/corner_radius_primary"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_primary"
                    app:cardBackgroundColor="@color/color_background_primary">

                    <TextView
                        android:textSize="@dimen/text_size_primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_secondary"
                        android:text="@string/code_by_opensourcefreak"
                        android:textAlignment="center" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/accent_neutral"

                android:layout_margin="@dimen/margin_secondary"
                app:cardCornerRadius="@dimen/corner_radius_secondary">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ayan"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/corner_radius_primary"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_primary"
                    app:cardBackgroundColor="@color/color_background_primary">

                    <TextView
                        android:textSize="@dimen/text_size_primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_secondary"
                        android:text="@string/design_by_ayan"
                        android:textAlignment="center"/>

                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_title"
        android:text="@string/wallpaper_contributors"
        android:layout_margin="@dimen/margin_secondary"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_margin="@dimen/margin_secondary"
        app:cardBackgroundColor="@color/accent_neutral"
        app:cardCornerRadius="48dp"
        android:minHeight="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_primary"
            android:id="@+id/wallpaper_contributors"
            android:layout_margin="@dimen/margin_semilarge"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>